syntax = "proto3";

package pb;


message Shop {
    string id = 1;
    string name = 2;
    string description = 3;
    string imageName = 4;
    string shopOwner = 5;
}