syntax = "proto3";

package payment;

import  "google/protobuf/timestamp.proto";

option go_package = "payment-service/payment";

message Order {
   string id = 1;            
   string userName = 2;       
   string buyer_id = 3;  
   string seller_id = 4;        
   float total_price = 5;
   string delivery_address = 6;    
   string country = 7;        
   string status = 8;    
   google.protobuf.Timestamp created_at  = 9;
}